<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>easy_plan</name>
    <version>1.0.0</version>
    <description>Core package for easy_plan</description>
    <maintainer email="mgons@unileon.es">Miguel Ángel González Santamarta</maintainer>
    <license>GPL-3.0</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>pluginlib</depend>
    <depend>easy_plan_msgs</depend>
    <depend>yasmin</depend>
    <depend>yasmin_ros</depend>
    <depend>poirot</depend>
    <build_depend>ros_environment</build_depend>
    <test_depend>ament_cmake_gtest</test_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>