<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>easy_plan_bt</name>
  <version>1.0.0</version>
  <description>BT integration for easy_plan</description>
  <maintainer email="mgons@unileon.es">Miguel Ángel González Santamarta</maintainer>
  <license>GPL-3.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>easy_plan</depend>
  <depend condition="$ROS_DISTRO == 'foxy' or $ROS_DISTRO == 'galactic' or $ROS_DISTRO == 'humble' or $ROS_DISTRO == 'iron'">behaviortree_cpp_v3</depend>
  <depend condition="$ROS_DISTRO != 'foxy' and $ROS_DISTRO != 'galactic' and $ROS_DISTRO != 'humble' and $ROS_DISTRO != 'iron'">behaviortree_cpp</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>