<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>easy_plan_tests</name>
    <version>0.0.0</version>
    <description>Integration tests for easy_plan system</description>
    <maintainer email="mgons@unileon.es">Miguel Ángel González Santamarta</maintainer>
    <license>GPL-3.0</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>ament_index_cpp</depend>
    <depend>pluginlib</depend>
    <depend>easy_plan</depend>
    <depend>easy_plan_val</depend>
    <depend>easy_plan_smtp</depend>
    <depend>easy_plan_knowledge_graph</depend>
    <depend>knowledge_graph</depend>
    <depend>rclcpp</depend>
    <depend>yasmin_factory</depend>
    <test_depend>ament_cmake_gtest</test_depend>
    <build_depend>ros_environment</build_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>